Fix - RTE5 Code editor: Horizontal scrolling not working properly #5079 (#2654)

--- a/ui/scss/tinymce-ace.scss
+++ b/ui/scss/tinymce-ace.scss
@@ -38,6 +38,10 @@
       font-family:monospace !important;
       white-space: pre;
     }
+
+    .ace_content {
+      position: relative;
+    }
   }
 
   .ace_scroller {
